--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "license": "MIT",
   "private": true,
   "devDependencies": {
-    "@types/node": "^17.0.42",
-    "@vercel/node": "^2.9.6",
-    "typescript": "^4.7.3"
+    "@types/node": "^17.0.45",
+    "@vercel/node": "^2.14.5",
+    "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "node-fetch": "^3.3.1"
   }
 }
