--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@vercel/node": "^2.14.5",
     "typescript": "^4.9.5"
   },
+  "type": "module",
   "dependencies": {
     "node-fetch": "^3.3.1"
   }
