--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
-  "repository": "https://github.com/vercel/examples.git",
   "license": "MIT",
   "private": true,
+  "type": "module",
+  "dependencies": {
+    "@octokit/auth-oauth-user": "^2.1.1"
+  },
   "devDependencies": {
     "@types/node": "^17.0.45",
     "@vercel/node": "^2.14.5",
     "typescript": "^4.9.5"
-  },
-  "type": "module",
-  "dependencies": {
-    "node-fetch": "^3.3.1"
   }
 }
