--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "private": true,
   "type": "module",
   "dependencies": {
-    "@octokit/auth-oauth-user": "^2.1.1"
+    "@octokit/auth-oauth-user": "^2.1.1",
+    "@octokit/auth-token": "^3.0.3",
+    "octokit": "^2.0.19"
   },
   "devDependencies": {
     "@types/node": "^17.0.45",
